k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-app
  namespace: retail
  labels:
    app: retail-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: retail-app
  template:
    metadata:
      labels:
        app: retail-app
    spec:
      containers:
        - name: retail-app
          image: collegemed/nodejs-retail:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
